--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
 		"url": "git+https://github.com/default-js/defaultjs-fetch-extentions.git"
 	},
 	"keywords": [
-		"web component",
-		"dialog",
-		"modal",
-		"html"
+		"browser",
+		"javascript",
+		"fetch",
+		"xml",
+		"xml2json"
 	],
 	"author": "Frank Schüler",
 	"license": "MIT",
@@ -42,19 +43,17 @@
 		"replace-in-file-webpack-plugin": "^1.0.6",
 		"webpack": "^5.40.0",
 		"webpack-cli": "^4.7.2",
-		"webpack-dev-server": "^3.11.2",
+		"webpack-dev-server": "^1.16.5",
 		"webpack-merge": "^5.8.0"
 	},
 	"dependencies": {
-		"@default-js/defaultjs-common-utils": "^0.14.1"
+		"@default-js/defaultjs-common-utils": "^0.15.1"
 	},
 	"directories": {
 		"test": "test"
 	},
 	"files": [
 		"index.js",
-		"bundle-browser.js",
-		"bundle-standalone.js",
 		"src/**",
 		"LICENSE",
 		"README.md"
