--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-	"name": "@default-js/defaultjs-fetch-extentions",
-	"version": "1.0.0",
+	"name": "@default-js/defaultjs-fetch-extentions",	
+	"buildname": "defaultjs-fetch-extentions",
+	"version": "1.0.1",
 	"description": "extends the browser fetch with more functionality",
 	"main": "index.js",
 	"repository": {
@@ -43,11 +44,11 @@
 		"replace-in-file-webpack-plugin": "^1.0.6",
 		"webpack": "^5.40.0",
 		"webpack-cli": "^4.7.2",
-		"webpack-dev-server": "^1.16.5",
+		"webpack-dev-server": "^4.2.1",
 		"webpack-merge": "^5.8.0"
 	},
 	"dependencies": {
-		"@default-js/defaultjs-common-utils": "^0.15.1"
+		"@default-js/defaultjs-common-utils": "latest"
 	},
 	"directories": {
 		"test": "test"
